The Great Refactoring 2.0

--- a/FIPLY/App/app/src/main/res/anim/anim_translate_revert.xml
+++ b/FIPLY/App/app/src/main/res/anim/anim_translate_revert.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
     <translate
-        android:fromYDelta="0"
-        android:toYDelta="40"
         android:duration="150"
+        android:fromYDelta="0"
         android:repeatCount="0"
-        ></translate>
+        android:toYDelta="40"></translate>
 </set>
