--- a/FIPLY/App/app/src/main/res/layout/music_list.xml
+++ b/FIPLY/App/app/src/main/res/layout/music_list.xml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-    >
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <Spinner
+        android:id="@+id/spinnerPlaylist"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/spinnerPlaylist"
-        android:background="@color/lightTextColorDark"
-        />
+        android:background="@color/lightTextColorDark" />
 
     <ListView
         android:id="@+id/listViewMusicList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="match_parent" />
 </LinearLayout>
