--- a/FIPLY/App/app/src/main/res/drawable/progressbar.xml
+++ b/FIPLY/App/app/src/main/res/drawable/progressbar.xml
@@ -2,25 +2,23 @@
 
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-        <item android:id="@android:id/background">
+    <item android:id="@android:id/background">
+        <shape>
+            <corners android:radius="2dip" />
+            <gradient
+                android:endColor="#000000"
+                android:startColor="#000000" />
+        </shape>
+    </item>
+
+    <item android:id="@android:id/progress">
+        <clip>
             <shape>
                 <corners android:radius="2dip" />
                 <gradient
-                    android:startColor="#000000"
-                    android:endColor="#000000"
-                    />
+                    android:endColor="#ff8400"
+                    android:startColor="#ff8400" />
             </shape>
-        </item>
-
-        <item android:id="@android:id/progress">
-            <clip>
-                <shape>
-                    <corners android:radius="2dip" />
-                    <gradient
-                        android:startColor="#ff8400"
-                        android:endColor="#ff8400"
-                        />
-                </shape>
-            </clip>
-        </item>
+        </clip>
+    </item>
 </layer-list>
