--- a/FIPLY/App/app/src/main/res/drawable/radio.xml
+++ b/FIPLY/App/app/src/main/res/drawable/radio.xml
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="true" android:state_window_focused="false"
-        android:drawable="@drawable/radiocheckedsmall" />
-    <item android:state_checked="false" android:state_window_focused="false"
-        android:drawable="@drawable/radiouncheckedsmall" />
-    <item android:state_checked="true" android:state_pressed="true"
-        android:drawable="@drawable/radiocheckedsmall" />
-    <item android:state_checked="false" android:state_pressed="true"
-        android:drawable="@drawable/radiouncheckedsmall" />
-    <item android:state_checked="true" android:state_focused="true"
-        android:drawable="@drawable/radiocheckedsmall" />
-    <item android:state_checked="false" android:state_focused="true"
-        android:drawable="@drawable/radiouncheckedsmall" />
-    <item android:state_checked="false" android:drawable="@drawable/radiouncheckedsmall" />
-    <item android:state_checked="true" android:drawable="@drawable/radiocheckedsmall" />
+    <item android:drawable="@drawable/radiocheckedsmall" android:state_checked="true" android:state_window_focused="false" />
+    <item android:drawable="@drawable/radiouncheckedsmall" android:state_checked="false" android:state_window_focused="false" />
+    <item android:drawable="@drawable/radiocheckedsmall" android:state_checked="true" android:state_pressed="true" />
+    <item android:drawable="@drawable/radiouncheckedsmall" android:state_checked="false" android:state_pressed="true" />
+    <item android:drawable="@drawable/radiocheckedsmall" android:state_checked="true" android:state_focused="true" />
+    <item android:drawable="@drawable/radiouncheckedsmall" android:state_checked="false" android:state_focused="true" />
+    <item android:drawable="@drawable/radiouncheckedsmall" android:state_checked="false" />
+    <item android:drawable="@drawable/radiocheckedsmall" android:state_checked="true" />
 </selector>
