--- a/FIPLY/App/app/src/main/res/layout/activity_main.xml
+++ b/FIPLY/App/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout android:id="@+id/drawer_layout"
-                                        xmlns:android="http://schemas.android.com/apk/res/android"
-                                        xmlns:tools="http://schemas.android.com/tools"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent"
-                                        tools:context="htl_leonding.fiplyteam.fiply.menu.MainActivity"
-    >
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="htl_leonding.fiplyteam.fiply.menu.MainActivity">
 
     <!-- FrameLayout in das die Fragments geladen werden -->
     <FrameLayout
         android:id="@+id/fraPlace"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="match_parent" />
 
     <!-- ListView die im NavigationDrawer dargestellt wird -->
     <ListView
@@ -22,7 +21,6 @@
         android:layout_gravity="start"
         android:background="@color/darkNavigationBackground"
         android:divider="@color/darkNavigationDivider"
-        android:dividerHeight="1dp"
-        />
+        android:dividerHeight="1dp" />
 
 </android.support.v4.widget.DrawerLayout>
