--- a/FIPLY/App/app/src/main/res/layout/activity_splash.xml
+++ b/FIPLY/App/app/src/main/res/layout/activity_splash.xml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:paddingBottom="@dimen/activity_vertical_margin"
-             android:paddingLeft="@dimen/activity_horizontal_margin"
-             android:paddingRight="@dimen/activity_horizontal_margin"
-             android:paddingTop="@dimen/activity_vertical_margin"
-             tools:context="htl_leonding.fiplyteam.fiply.menu.SplashActivity"
-    >
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="htl_leonding.fiplyteam.fiply.menu.SplashActivity">
 
     <!-- Stellt das Fiply-Logo mittels einer ImageView dar -->
     <ImageView
         android:id="@+id/imageViewSplash"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/splash1"
-        />
+        android:src="@drawable/splash1" />
 
 </FrameLayout>
