--- a/FIPLY/App/app/src/main/res/layout/fragment_clocksnav.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_clocksnav.xml
@@ -1,25 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:layout_alignParentRight="true"
-              android:orientation="vertical"
-    >
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentRight="true"
+    android:orientation="vertical">
 
     <Button
         android:id="@+id/btnNavWatch"
         android:layout_width="wrap_content"
         android:layout_height="65dp"
         android:layout_weight="1"
-        android:text="@string/navWatch"
-        />
+        android:text="@string/navWatch" />
 
     <Button
         android:id="@+id/btnNavTimer"
         android:layout_width="wrap_content"
         android:layout_height="65dp"
         android:layout_weight="1"
-        android:text="@string/navTimer"
-        />
+        android:text="@string/navTimer" />
 
 </LinearLayout>
