--- a/FIPLY/App/app/src/main/res/layout/fragment_countdown.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_countdown.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-    >
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <Button
         android:id="@+id/btnTimerStart"
@@ -14,8 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="2dp"
         android:background="@drawable/buttonshape"
-        android:text="@string/timerStart"
-        />
+        android:text="@string/timerStart" />
 
     <EditText
         android:id="@+id/etTimer"
@@ -29,7 +27,6 @@
         android:background="@null"
         android:inputType="number"
         android:textColor="@color/darkPrimary"
-        android:textSize="30dp"
-        />
+        android:textSize="30dp" />
 
 </RelativeLayout>
