--- a/FIPLY/App/app/src/main/res/layout/fragment_createuser2.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_createuser2.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-    >
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <SeekBar
         android:id="@+id/sbHeight"
@@ -16,16 +15,14 @@
         android:indeterminate="false"
         android:longClickable="false"
         android:rotation="270"
-        android:splitTrack="false"
-        />
+        android:splitTrack="false" />
 
     <SeekBar
         android:id="@+id/sbWeight"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        />
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:id="@+id/tvSize"
@@ -34,8 +31,7 @@
         android:layout_below="@+id/sbHeight"
         android:layout_marginLeft="50dp"
         android:layout_toEndOf="@+id/tvWeight"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        />
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
         android:id="@+id/tvWeight"
@@ -43,8 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/sbWeight"
         android:layout_centerHorizontal="true"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        />
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <ImageView
         android:id="@+id/ivBody"
@@ -54,7 +49,6 @@
         android:layout_alignParentStart="true"
         android:layout_alignTop="@+id/tvWeight"
         android:layout_marginLeft="50dp"
-        android:contentDescription="stickman"
-        />
+        android:contentDescription="stickman" />
 
 </RelativeLayout>
