--- a/FIPLY/App/app/src/main/res/layout/fragment_music.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_music.xml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:id="@+id/musicLayout"
-    >
+    android:id="@+id/musicLayout"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <TextView
         android:id="@+id/tvMuSongname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/songNotFound"
-        android:textColor="@color/darkPrimary"
-        />
+        android:textColor="@color/darkPrimary" />
 
     <TextView
         android:id="@+id/tvMuCurrentDur"
@@ -24,8 +22,7 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/tvMuSongname"
         android:text="0:00"
-        android:textColor="@color/darkPrimary"
-        />
+        android:textColor="@color/darkPrimary" />
 
     <TextView
         android:id="@+id/tvMuTotalDur"
@@ -34,8 +31,7 @@
         android:layout_alignParentRight="true"
         android:layout_below="@+id/tvMuSongname"
         android:text="0:00"
-        android:textColor="@color/darkPrimary"
-        />
+        android:textColor="@color/darkPrimary" />
 
     <SeekBar
         android:id="@+id/seekBarMu"
@@ -43,14 +39,12 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvMuSongname"
         android:layout_toLeftOf="@id/tvMuTotalDur"
-        android:layout_toRightOf="@id/tvMuCurrentDur"
-        />
+        android:layout_toRightOf="@id/tvMuCurrentDur" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/seekBarMu"
-        >
+        android:layout_below="@+id/seekBarMu">
 
         <ImageButton
             android:id="@+id/btnMuLast"
@@ -62,8 +56,7 @@
             android:background="@color/darkSecondary"
             android:padding="2dp"
             android:scaleType="fitCenter"
-            android:src="@drawable/last"
-            />
+            android:src="@drawable/last" />
 
         <ImageButton
             android:id="@+id/btnMuPlay"
@@ -75,8 +68,7 @@
             android:padding="2dp"
             android:scaleType="fitCenter"
             android:src="@drawable/play"
-            android:text="@string/songPlay"
-            />
+            android:text="@string/songPlay" />
 
         <ImageButton
             android:id="@+id/btnMuStop"
@@ -87,8 +79,7 @@
             android:background="@color/darkSecondary"
             android:padding="2dp"
             android:scaleType="fitCenter"
-            android:src="@drawable/stop"
-            />
+            android:src="@drawable/stop" />
 
         <ImageButton
             android:id="@+id/btnMuNext"
@@ -100,8 +91,7 @@
             android:background="@color/darkSecondary"
             android:padding="2dp"
             android:scaleType="fitCenter"
-            android:src="@drawable/next"
-            />
+            android:src="@drawable/next" />
 
         <ImageButton
             android:id="@+id/btnMuList"
@@ -112,7 +102,6 @@
             android:background="@color/darkSecondary"
             android:padding="2dp"
             android:scaleType="fitCenter"
-            android:src="@drawable/listviewunpressed"
-            />
+            android:src="@drawable/listviewunpressed" />
     </RelativeLayout>
 </RelativeLayout>
