--- a/FIPLY/App/app/src/main/res/layout/fragment_trainingssession.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_trainingssession.xml
@@ -1,33 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/trainingssession"
-    >
+    android:id="@+id/trainingssession"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <FrameLayout
         android:id="@+id/fraTsMusic"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/darkSecondary"
-        />
+        android:background="@color/darkSecondary" />
 
     <RelativeLayout
         android:id="@+id/clocksLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@id/fraTsMusic"
-        android:background="@drawable/clockstabsshape"
-        >
+        android:background="@drawable/clockstabsshape">
 
         <FrameLayout
             android:id="@+id/fraTsClocksNav"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            />
+            android:layout_centerVertical="true" />
 
         <View
             android:layout_width="5dp"
@@ -35,16 +31,14 @@
             android:layout_alignBottom="@id/fraTsClocksNav"
             android:layout_alignTop="@id/fraTsClocksNav"
             android:layout_toLeftOf="@id/fraTsClocksNav"
-            android:background="@color/darkPrimary"
-            />
+            android:background="@color/darkPrimary" />
 
         <FrameLayout
             android:id="@+id/fraTsClocks"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            />
+            android:layout_centerVertical="true" />
 
     </RelativeLayout>
 
@@ -53,7 +47,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/clocksLayout"
-        android:background="@color/darkSecondary"
-        />
+        android:background="@color/darkSecondary" />
 
 </RelativeLayout>
