--- a/FIPLY/App/app/src/main/res/layout/fragment_uebungdetail.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_uebungdetail.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"
-            android:saveEnabled="false"
-    >
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:saveEnabled="false">
 
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical"
-        android:weightSum="1"
-        >
+        android:weightSum="1">
 
         <TextView
             android:id="@+id/detailUebungName"
@@ -24,33 +22,30 @@
             android:layout_centerHorizontal="true"
             android:text="@string/detailName"
             android:textColor="@color/darkTextColorLight"
-            android:textSize="25dp"
-            />
+            android:textSize="25dp" />
 
         <TextView
             android:id="@+id/staticDetailMuskelGruppe"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
+            android:layout_below="@+id/detailUebungName"
             android:layout_marginLeft="5dp"
             android:text="@string/detailMG"
-            android:textColor="@color/darkTextColorLight"
-            android:layout_below="@+id/detailUebungName"
-            />
+            android:textColor="@color/darkTextColorLight" />
 
         <TextView
             android:id="@+id/detailMuskelGruppe"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_marginBottom="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginLeft="18dp"
-            android:layout_toRightOf="@id/staticDetailMuskelGruppe"
             android:layout_below="@+id/detailUebungName"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="18dp"
+            android:layout_marginRight="5dp"
+            android:layout_toRightOf="@id/staticDetailMuskelGruppe"
             android:text="Test Muskelgruppe"
-            android:textColor="@color/darkTextColorLight"
-            />
+            android:textColor="@color/darkTextColorLight" />
 
         <TextView
             android:id="@+id/staticDetailSchwierigkeit"
@@ -59,8 +54,7 @@
             android:layout_alignStart="@id/staticDetailMuskelGruppe"
             android:layout_below="@+id/detailMuskelGruppe"
             android:text="@string/detailSchwierigkeit"
-            android:textColor="@color/darkTextColorLight"
-            />
+            android:textColor="@color/darkTextColorLight" />
 
         <TextView
             android:id="@+id/detailSchwierigkeit"
@@ -72,8 +66,7 @@
             android:layout_marginBottom="5dp"
             android:layout_marginRight="5dp"
             android:text="Test Schwierigkeit"
-            android:textColor="@color/darkTextColorLight"
-            />
+            android:textColor="@color/darkTextColorLight" />
 
         <TextView
             android:id="@+id/staticDetailBeschreibung"
@@ -82,8 +75,7 @@
             android:layout_alignStart="@id/staticDetailSchwierigkeit"
             android:layout_below="@+id/detailSchwierigkeit"
             android:text="@string/detailDesc"
-            android:textColor="@color/darkTextColorLight"
-            />
+            android:textColor="@color/darkTextColorLight" />
 
         <TextView
             android:id="@+id/detailBeschreibung"
@@ -95,8 +87,7 @@
             android:layout_marginBottom="5dp"
             android:layout_marginRight="5dp"
             android:text="Test Beschreibung"
-            android:textColor="@color/darkTextColorLight"
-            />
+            android:textColor="@color/darkTextColorLight" />
 
         <TextView
             android:id="@+id/staticDetailAnleitung"
@@ -105,8 +96,7 @@
             android:layout_alignStart="@id/staticDetailBeschreibung"
             android:layout_below="@+id/detailBeschreibung"
             android:text="@string/detailAnl"
-            android:textColor="@color/darkTextColorLight"
-            />
+            android:textColor="@color/darkTextColorLight" />
 
         <TextView
             android:id="@+id/detailAnleitung"
@@ -117,8 +107,7 @@
             android:layout_marginBottom="5dp"
             android:layout_marginRight="5dp"
             android:text="Test Anleitung"
-            android:textColor="@color/darkTextColorLight"
-            />
+            android:textColor="@color/darkTextColorLight" />
 
         <TextView
             android:id="@+id/staticDetailEquipment"
@@ -127,8 +116,7 @@
             android:layout_alignStart="@id/staticDetailAnleitung"
             android:layout_below="@+id/detailAnleitung"
             android:text="@string/detailEquipment"
-            android:textColor="@color/darkTextColorLight"
-            />
+            android:textColor="@color/darkTextColorLight" />
 
         <TextView
             android:id="@+id/detailEquipment"
@@ -139,8 +127,7 @@
             android:layout_marginBottom="5dp"
             android:layout_marginRight="5dp"
             android:text="Test Equipment"
-            android:textColor="@color/darkTextColorLight"
-            />
+            android:textColor="@color/darkTextColorLight" />
 
 
         <ImageButton
@@ -152,8 +139,7 @@
             android:background="@color/darkSecondary"
             android:padding="3dp"
             android:scaleType="fitCenter"
-            android:src="@drawable/videoplay2redsmall"
-            />
+            android:src="@drawable/videoplay2redsmall" />
 
 
     </RelativeLayout>
