--- a/FIPLY/App/app/src/main/res/layout/fragment_uebungfilter.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_uebungfilter.xml
@@ -1,68 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="fill_parent"
-    android:layout_width="fill_parent">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+
     <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:weightSum="1"
-    android:columnCount="2"
-    android:rowCount="3">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:columnCount="2"
+        android:orientation="vertical"
+        android:rowCount="3"
+        android:weightSum="1">
 
-    <TextView
-        android:layout_width="176dp"
-        android:layout_height="wrap_content"
-        android:text="Filter Name: "
-        android:id="@+id/staticFilterUebungName"
-        android:layout_weight="0.12"
-        android:layout_row="0"
-        android:layout_column="0" />
+        <TextView
+            android:id="@+id/staticFilterUebungName"
+            android:layout_width="176dp"
+            android:layout_height="wrap_content"
+            android:layout_column="0"
+            android:layout_row="0"
+            android:layout_weight="0.12"
+            android:text="Filter Name: " />
 
-    <EditText
-        android:layout_width="194dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/etFilterUebungName"
-        android:layout_row="0"
-        android:layout_column="1" />
+        <EditText
+            android:id="@+id/etFilterUebungName"
+            android:layout_width="194dp"
+            android:layout_height="wrap_content"
+            android:layout_column="1"
+            android:layout_row="0" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/ivBodyFilterMask"
-        android:layout_gravity="center_horizontal"
-        android:clickable="true"
-        android:layout_row="1"
-        android:layout_column="0"
-        android:background="@color/darkSecondary"
-        android:layout_columnSpan="1" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/ivBodyFilter"
-        android:layout_gravity="center_horizontal"
-        android:visibility="visible"
-        android:layout_row="1"
-        android:layout_column="0"
-        android:layout_columnSpan="1" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Apply Filter"
-        android:id="@+id/btApplyFilter"
-        android:layout_gravity="center_horizontal"
-        android:layout_row="2"
-        android:layout_column="0" />
-
-        <Button
+        <ImageView
+            android:id="@+id/ivBodyFilterMask"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Reset Filter"
-            android:id="@+id/btResetFilter"
+            android:layout_column="0"
+            android:layout_columnSpan="1"
+            android:layout_gravity="center_horizontal"
+            android:layout_row="1"
+            android:background="@color/darkSecondary"
+            android:clickable="true" />
+
+        <ImageView
+            android:id="@+id/ivBodyFilter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="0"
+            android:layout_columnSpan="1"
+            android:layout_gravity="center_horizontal"
+            android:layout_row="1"
+            android:visibility="visible" />
+
+        <Button
+            android:id="@+id/btApplyFilter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="0"
             android:layout_gravity="center_horizontal"
             android:layout_row="2"
-            android:layout_column="1" />
+            android:text="Apply Filter" />
+
+        <Button
+            android:id="@+id/btResetFilter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="1"
+            android:layout_gravity="center_horizontal"
+            android:layout_row="2"
+            android:text="Reset Filter" />
     </GridLayout>
 </ScrollView>
