--- a/FIPLY/App/app/src/main/res/layout/fragment_uebungskatalog.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_uebungskatalog.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-                android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
     <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
     <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
     <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
@@ -14,19 +13,18 @@
         android:layout_width="match_parent"
         android:layout_height="352dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentTop="true"
-        />
+        android:layout_alignParentTop="true" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabFilter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:clickable="true"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:clickable="true"
         android:src="@color/darkPrimary"
-        app:rippleColor="@color/darkSecondary"
-        app:elevation="100dp" />
+        app:elevation="100dp"
+        app:rippleColor="@color/darkSecondary" />
 </RelativeLayout>
