--- a/FIPLY/App/app/src/main/res/layout/music_item_checkable.xml
+++ b/FIPLY/App/app/src/main/res/layout/music_item_checkable.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"
-          android:id="@android:id/text1"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:gravity="center_vertical"
-          android:paddingBottom="2dp"
-          android:paddingLeft="4dp"
-          android:paddingRight="2dp"
-          android:paddingTop="2dp"
-          android:textColor="@color/darkPrimary"
-          android:checkMarkTint="@color/darkPrimary"
-          android:checkMark="?android:attr/listChoiceIndicatorMultiple"
-    />
+    android:id="@android:id/text1"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+    android:checkMarkTint="@color/darkPrimary"
+    android:gravity="center_vertical"
+    android:paddingBottom="2dp"
+    android:paddingLeft="4dp"
+    android:paddingRight="2dp"
+    android:paddingTop="2dp"
+    android:textColor="@color/darkPrimary" />
