--- a/FIPLY/App/app/src/main/res/layout/navigation_list.xml
+++ b/FIPLY/App/app/src/main/res/layout/navigation_list.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="fill_parent"
-              android:orientation="horizontal"
-    >
+    android:layout_width="match_parent"
+    android:layout_height="fill_parent"
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/navlist_content"
@@ -13,7 +12,6 @@
         android:background="@drawable/buttonshape"
         android:gravity="center"
         android:textColor="@color/darkNavigationText"
-        android:textSize="25dp"
-        />
+        android:textSize="25dp" />
 
 </LinearLayout>
