--- a/FIPLY/App/app/src/main/res/layout/uebungskatalog_item.xml
+++ b/FIPLY/App/app/src/main/res/layout/uebungskatalog_item.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="fill_parent"
-              android:layout_height="wrap_content"
-              android:orientation="vertical"
-              android:padding="8dp"
-    >
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="8dp">
 
     <TextView
         android:id="@+id/ueListViewItem"
@@ -13,6 +12,5 @@
         android:layout_margin="2dp"
         android:background="@color/darkPrimary"
         android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
-        android:textSize="25dp"
-        />
+        android:textSize="25dp" />
 </LinearLayout>
