--- a/FIPLY/App/app/src/main/res/drawable/buttonshape.xml
+++ b/FIPLY/App/app/src/main/res/drawable/buttonshape.xml
@@ -2,11 +2,16 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners
-        android:bottomLeftRadius="20dp"
-        android:bottomRightRadius="20dp"
-        android:topLeftRadius="20dp"
-        android:topRightRadius="20dp" />
+        android:bottomLeftRadius="3dp"
+        android:bottomRightRadius="3dp"
+        android:topLeftRadius="3dp"
+        android:topRightRadius="3dp"
+        />
+    <solid android:color="@color/darkPrimary"
+        />
+
     <solid android:color="@color/darkPrimary" />
+
     <padding
         android:bottom="0dp"
         android:left="0dp"
